# pharos-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SUPPORT.md  release-plz.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: rfc.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/pharos-benches/: Cargo.toml
benches/pharos-benches/benches/: event_bus.rs  outbox_dispatcher.rs
crates/pharos/: CHANGELOG.md  Cargo.toml
crates/pharos-app/: CHANGELOG.md  Cargo.toml
crates/pharos-app/src/: command.rs  consumer_group.rs  error.rs  event_bus.rs  event_handler.rs  inbox.rs  integration_event.rs  lib.rs  messaging.rs  observability.rs  outbox.rs  outbox_dispatcher.rs  query.rs  resilience.rs  schema_registry.rs  serialization.rs  service.rs  tenant.rs  tenant_local.rs  tower_service.rs  transport.rs  unit_of_work.rs  upcast.rs
crates/pharos-axum/: CHANGELOG.md  Cargo.toml
crates/pharos-axum/src/: lib.rs
crates/pharos-core/: CHANGELOG.md  Cargo.toml
crates/pharos-core/src/: aggregate.rs  domain_event.rs  entity.rs  errors.rs  lib.rs  money.rs  repository.rs  value_object.rs
crates/pharos-es/: CHANGELOG.md  Cargo.toml
crates/pharos-es/src/: lib.rs
crates/pharos-infra/: CHANGELOG.md  Cargo.toml
crates/pharos-infra/src/: in_memory_consumer_group.rs  in_memory_dead_letter.rs  in_memory_inbox.rs  in_memory_messaging.rs  in_memory_outbox.rs  in_memory_repository.rs  in_memory_schema_registry.rs  lib.rs  outbox_dispatcher_tests.rs
crates/pharos-kafka/: CHANGELOG.md  Cargo.toml
crates/pharos-kafka/src/: lib.rs
crates/pharos-macros/: CHANGELOG.md  Cargo.toml
crates/pharos-macros/src/: lib.rs
crates/pharos-macros/tests/: dispatchable_derives.rs  external_fields.rs
crates/pharos-memory/: Cargo.toml
crates/pharos-memory/src/: in_memory_consumer_group.rs  in_memory_inbox.rs  in_memory_outbox.rs  in_memory_schema_registry.rs  lib.rs  outbox_dispatcher_tests.rs
crates/pharos-memory/tests/: dead_letter_sweep_flow.rs  process_idempotent_flow.rs
crates/pharos-messaging/: Cargo.toml
crates/pharos-messaging/src/: consume.rs  dead_letter.rs  inbox.rs  lib.rs  messaging.rs  outbox.rs  outbox_dispatcher.rs
crates/pharos-nats/: CHANGELOG.md  Cargo.toml
crates/pharos-nats/src/: lib.rs
crates/pharos-postgres/: CHANGELOG.md  Cargo.toml
crates/pharos-postgres/migrations/: 0001_eventing.sql  0002_aggregates.sql  0003_tenant_aggregates.sql  0004_dead_letter.sql  0005_event_store.sql  0006_sagas.sql  README.md
crates/pharos-postgres/src/: dead_letter.rs  event_store.rs  eventing.rs  json_repository.rs  lib.rs  pool.rs  saga_store.rs  tenant_repository.rs  transaction.rs
crates/pharos-postgres/tests/: docker_integration.rs
crates/pharos-proto/: CHANGELOG.md  Cargo.toml
crates/pharos-proto/src/: envelope.rs  error.rs  lib.rs  serializer.rs
crates/pharos-redis/: CHANGELOG.md  Cargo.toml
crates/pharos-redis/src/: lib.rs
crates/pharos-redis/tests/: docker_integration.rs
crates/pharos-saga/: CHANGELOG.md  Cargo.toml
crates/pharos-saga/src/: lib.rs
crates/pharos-testing/: CHANGELOG.md  Cargo.toml
crates/pharos-testing/src/: lib.rs
crates/pharos/src/: lib.rs
crates/pharos/tests/: facade_derives.rs
docs/: README.md
docs/guide/: 30-minutes.md  architecture.md  benchmarks.md  complete-usage.md  cookbook.md  crates.md  decision-matrix.md  ergonomics-review.md  jsonb-schema-rollback.md  observability.md  persistence-ladder.md  pitfalls.md  production.md
docs/rfc/: 0000-template.md  README.md
docs/rustdoc/: mermaid-header.html
docs/site/: book.toml
docs/site/src/: SUMMARY.md  complete-usage.md  cookbook.md  decision-matrix.md  ecosystem.md  ergonomics.md  getting-started.md  index.md  pitfalls.md  production.md  rfc-process.md  tutorial-30-minutes.md
examples/modular-monolith/: Cargo.toml
examples/modular-monolith/src/: billing.rs  lib.rs  main.rs  orders.rs
examples/modular-monolith/tests/: cross_context_flow.rs  integration_event_flow.rs
examples/multi-tenant/: Cargo.toml
examples/multi-tenant/src/: lib.rs  main.rs
examples/multi-tenant/tests/: tenant_isolation.rs
examples/order/: Cargo.toml
examples/order/src/: lib.rs  main.rs  web.rs
examples/order/src/application/: commands.rs  error.rs  event_handlers.rs  handlers.rs  mod.rs  queries.rs
examples/order/src/domain/: events.rs  mod.rs  order.rs  value_objects.rs
examples/order/src/infrastructure/: mod.rs  postgres_order_repository.rs
examples/order/src/web/: error.rs  mod.rs  orders.rs  state.rs
examples/order/tests/: command_instrumentation_flow.rs  consumer_group_flow.rs  dead_letter_flow.rs  event_capture_flow.rs  inbox_idempotency_flow.rs  integration_event_flow.rs  observability_config_flow.rs  outbox_dispatcher_flow.rs  outbox_flow.rs  postgres_order_repository.rs  redis_messaging_flow.rs  schema_registry_flow.rs  transport_contract_flow.rs  unit_of_work_flow.rs  validation_flow.rs  web_axum_tower_flow.rs
templates/workspace/: Cargo.toml  README.md
templates/workspace/crates/api/: Cargo.toml
templates/workspace/crates/api/src/: main.rs
templates/workspace/crates/application/: Cargo.toml
templates/workspace/crates/application/src/: lib.rs
templates/workspace/crates/domain/: Cargo.toml
templates/workspace/crates/domain/src/: lib.rs
tools/pharos-init/: Cargo.toml
tools/pharos-init/src/: config.rs  generator.rs  main.rs  prompt.rs
