[package]
name = "pharos-app"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "Application contracts for Pharos RS: command/query handlers, event bus, outbox, inbox, and messaging."

[dependencies]
pharos-core      = { path = "../pharos-core", version = "0.2.0" }
pharos-messaging = { path = "../pharos-messaging", version = "0.2.0" }
chrono      = { workspace = true }
serde       = { workspace = true }
metrics     = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true, optional = true }
tower       = { workspace = true, optional = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[features]
# Adapters exposing command/query handlers as `tower::Service`s.
tower = ["dep:tower"]
# Task-local tenant propagation (`CURRENT_TENANT`). Requires the Tokio runtime;
# the canonical, runtime-agnostic path is threading `TenantContext` explicitly.
tenant-task-local = ["dep:tokio"]
# `Retrying` event-handler decorator (backoff sleeps need Tokio's timer).
retry = ["dep:tokio", "tokio/time"]

[dev-dependencies]
tokio = { workspace = true }
# The pipeline doctest composes real layers around a handler service.
tower = { workspace = true, features = ["limit", "timeout"] }

[lints]
workspace = true
