[package]
name = "pharos-core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "Domain primitives for Pharos RS: entities, aggregates, repositories, and domain events."

[dependencies]
thiserror   = { workspace = true }
chrono      = { workspace = true }

[lints]
workspace = true
