[package]
name = "pharos-core"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "Domain primitives for Pharos RS: entities, aggregates, repositories, and domain events."

[dependencies]
thiserror   = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Serde derives for Money/Currency (amount serialized as a decimal string).
serde = ["dep:serde"]

[lints]
workspace = true
