[package]
name = "pharos-es"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "Event sourcing building blocks for Pharos."

[dependencies]
pharos-core = { path = "../pharos-core", version = "0.1.0" }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
