[package]
name = "pharos-infra"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"

[dependencies]
pharos-core    = { path = "../pharos-core" }
pharos-app     = { path = "../pharos-app" }
chrono      = { workspace = true }
dashmap     = { workspace = true }
futures     = { workspace = true }
metrics     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[lints]
workspace = true
