[package]
name = "pharos-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pharos-rs/pharos-rs"

[lib]
proc-macro = true

[dependencies]
syn         = { workspace = true }
quote       = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
# Integration tests derive the real `pharos-app` traits and run them.
pharos-app = { path = "../pharos-app" }
tokio      = { workspace = true }
tracing    = { workspace = true }
