[package]
name = "pharos-messaging"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "Broker-facing messaging contracts for Pharos RS: messages, publishers/consumers, retry, outbox, inbox, dead-letter, consumer groups, and schema registry."

[dependencies]
chrono    = { workspace = true }
fastrand  = { workspace = true }
futures   = { workspace = true }
metrics   = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
uuid      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
