[package]
name = "pharos-nats"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pharos-rs/pharos-rs"
description = "NATS adapters for Pharos messaging contracts."

[dependencies]
pharos-app = { path = "../pharos-app" }
async-nats = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
