[package]
name = "pharos-nats"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "NATS adapters for Pharos messaging contracts."

[dependencies]
pharos-app = { path = "../pharos-app", version = "0.2.0" }
async-nats = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
