[package]
name = "pharos-redis"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pharos-rs/pharos-rs"
description = "Redis messaging adapter for Pharos RS."

[dependencies]
pharos-app = { path = "../pharos-app" }

metrics     = { workspace = true }
redis       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true }
testcontainers = { workspace = true }
