[package]
name = "pharos-saga"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/lisboaigor/pharos-rs"
description = "Saga and process-manager building blocks for Pharos."

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
