[package]
name    = "pharos-init"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
description = "Interactive project scaffolder for Pharos RS, guided by the decision matrix."
license = "MIT OR Apache-2.0"

[[bin]]
name = "pharos-init"
path = "src/main.rs"

[dependencies]
dialoguer = "0.11"
console   = "0.15"
indoc     = "2"

[lints]
workspace = true
